--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,62 @@
 version: '3.8'
 
 services:
-  ecu-agent-mlflow:
-    build: .
-    image: ecu-agent-mlflow:latest
-    container_name: ecu-agent-mlflow
+  # 训练容器：运行实验、注册模型、MLflow服务器
+  mlflow-train:
+    build:
+      context: .
+      dockerfile: Dockerfile.train
+    container_name: ecu-agent-train
     ports:
-      - "8080:8080"
+      - "5000:5000"  # MLflow UI
+    volumes:
+      # 持久化MLflow数据
+      - ./mlruns:/app/mlruns
+      - ./mlflow.db:/app/mlflow.db
+      # 持久化实验结果
+      - ./experiments:/app/experiments
+      # 挂载源代码（方便开发时修改）
+      - ./src:/app/src
+      - ./data:/app/data
     environment:
-      # Set your API key here or use .env file
+      - MLFLOW_TRACKING_URI=http://localhost:5000
       - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
       - DEEPSEEK_API_BASE=${DEEPSEEK_API_BASE:-https://api.deepseek.com}
+    networks:
+      - ecu-network
+    stdin_open: true
+    tty: true
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
 
-# Optional: If you want to persist logs
+  # 服务容器：加载模型、提供API服务
+  ecu-serve:
+    build:
+      context: .
+      dockerfile: Dockerfile.serve
+    container_name: ecu-agent-serve
+    ports:
+      - "8000:8000"  # API服务
+    volumes:
+      # 挂载模型缓存
+      - ./model_cache:/app/model_cache
+      # 共享MLflow数据（只读）
+      - ./mlruns:/app/mlruns:ro
+    environment:
+      - MLFLOW_TRACKING_URI=http://mlflow-train:5000
+      - MODEL_NAME=ECUAgent
+      - MODEL_VERSION=latest
+      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - DEEPSEEK_API_BASE=${DEEPSEEK_API_BASE:-https://api.deepseek.com}
+    networks:
+      - ecu-network
+    depends_on:
+      - mlflow-train
+    restart: unless-stopped
+
+networks:
+  ecu-network:
+    driver: bridge
+
 volumes:
-  logs:
+  mlruns:
+  mlflow-db:
